tests/fixtures/invalid/char_array_string_initializer_too_long.c
int main(void) {
    char short_text[2] = "abc";
    return short_text[0];
}
